[package]
name = "rusty-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.22.0"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
log = "0.4.22"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
